--- a/code/API_definitions/webrtc-events-subscription.yaml
+++ b/code/API_definitions/webrtc-events-subscription.yaml
@@ -178,7 +178,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.1.0
+  version: vwip
   x-camara-commonalities: 0.5
 
 externalDocs:
