--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -166,10 +166,10 @@ paths:
         1. Let `t_req` be the server-side receipt time of the request and
            `t_prev` the previously stored `registrationExpireTime`.
         2. Compute the remaining lifetime
-              remaining = t_prev – t_req
+              remaining = t_prev - t_req
            (values ≤ 0 indicate the client is late; operators MAY reject or
            treat it as a new registration).
-        3. Apply the operator’s configured TTL (`TTL_cfg`, e.g. 3600 s) **from
+        3. Apply the operator's configured TTL (`TTL_cfg`, e.g. 3600 s) **from
            `t_req`, not from `t_prev`**:
               newExpire = t_req + TTL_cfg
         4. Persist `newExpire` and return it in `expiresAt` inside the
@@ -281,7 +281,7 @@ components:
         deviceId:
           type: string
           description: |-
-            The device-id of the client in UUID format. A unique identifier for
+            The deviceId of the client in UUID format. A unique identifier for
             the physical device where a registration is initiated. Generated
             by the WebRTC application, and consistent within the same device.
         registrationExpireTime:
@@ -295,7 +295,7 @@ components:
               or other non-SIM hardware) SHOULD treat the value as an
               **upper bound**.  Such devices MAY derive a local time-to-live:
 
-                  ttl = registrationExpireTime – now()
+                  ttl = registrationExpireTime - now()
 
               and initiate a refresh *before* `ttl` elapses (a safety margin
               of ~120 s is recommended).
@@ -330,7 +330,7 @@ components:
           description: |-
             Optional **absolute** UTC timestamp that *requests* a new expiry.
             The server will honour the value only if it is **later than the
-            operator’s minimum TTL** and **earlier than operator maximum TTL**;
+            operator's minimum TTL** and **earlier than operator maximum TTL**;
             otherwise it falls back to its own policy (see refresh algorithm
             above).
 
