doc: Update `types` (multiple) property of `Subscription` schema
- Allow multiple event suscription types per susbcription

--- a/code/API_definitions/webrtc-events-subscription.yaml
+++ b/code/API_definitions/webrtc-events-subscription.yaml
@@ -58,10 +58,7 @@ info:
 
     This API allows to create an explicit notification channel for two types of
     events. It is mandatory in the subscription to provide the event type for
-    which the client would like to subscribe. Per CAMARA Commonalities,
-    **each subscription only can be dedicated to a single event type**. You
-    usually will need one per endpoint registration and one per session in
-    progress.
+    which the client would like to subscribe.
 
     Following event types are managed for this API:
 
@@ -489,8 +486,7 @@ components:
         types:
           description: |-
             Camara Event types eligible to be delivered by this subscription.
-            Note: for the Commonalities meta-release v0.4 we enforce to have only event type per subscription
-            then for following meta-release use of array MUST be decided at API project level.
+            Note: the maximum number of event types per subscription will be decided at API project level
           type: array
           minItems: 1
           maxItems: 1
@@ -657,13 +653,12 @@ components:
         types:
           description: |-
             Camara Event types eligible to be delivered by this subscription.
-            For Commonalities v0.4 we enforce to use one subscription per event type. In consequence,
-            this field is an array of a single element.
+            Note: the maximum number of event types per subscription will be decided at API project level
           type: array
           minItems: 1
           maxItems: 1
           items:
-            type: string
+            $ref: "#/components/schemas/SubscriptionEventType"
         config:
           $ref: '#/components/schemas/Config'
         id:
