--- a/code/API_definitions/webrtc-events-subscription.yaml
+++ b/code/API_definitions/webrtc-events-subscription.yaml
@@ -170,8 +170,18 @@ info:
     compliance with user privacy preferences and regulatory obligations,
     upholding the principles of transparency and user-centric data control.
 
-    ## 5. Further info and support
-    (Will be added in a later version of the documentation)
+    ## 5. Additional CAMARA error responses
+    The list of error codes in this API specification is not exhaustive.
+    Therefore the API specification may not document some non-mandatory error
+    statuses as indicated in `CAMARA API Design Guide`.
+
+    Please refer to the `CAMARA_common.yaml` of the Commonalities Release
+    associated to this API version for a complete list of error responses. The
+    applicable Commonalities Release can be identified in the `API Readiness
+    Checklist` document associated to this API version.
+
+    As a specific rule, error `501 - NOT_IMPLEMENTED` can be only a possible
+    error response if it is explicitly documented in the API.
 
   license:
     name: Apache 2.0
