--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -301,8 +301,9 @@ components:
           type: string
           format: date-time
           description: |-
-            Optional **absolute** expiry moment for this registration,
-            expressed as an RFC 3339/UTC timestamp.
+            Optional **absolute** expiry moment for this registration.
+            It must follow [RFC 3339](https://datatracker.ietf.org/doc/html/rfc3339#section-5.6) and must have time zone.
+            Recommended format is yyyy-MM-dd'T'HH:mm:ss.SSSZ (i.e. which allows 2023-07-03T14:27:08.312+02:00 or 2023-07-03T12:27:08.312Z)
 
             ▸ **Devices without a trustworthy clock** (e.g. Wi-Fi-only tablets
               or other non-SIM hardware) SHOULD treat the value as an
@@ -334,6 +335,9 @@ components:
 
             Client applications should compute the remaining time before expiry (expiresAt - currentTime)
             and plan to refresh well in advance to avoid race conditions. A suggested margin is 120 seconds before expiry.
+
+            It must follow [RFC 3339](https://datatracker.ietf.org/doc/html/rfc3339#section-5.6) and must have time zone.
+            Recommended format is yyyy-MM-dd'T'HH:mm:ss.SSSZ (i.e. which allows 2023-07-03T14:27:08.312+02:00 or 2023-07-03T12:27:08.312Z)
     regSessionUpdate:
       type: object
       properties:
@@ -349,6 +353,9 @@ components:
 
             If omitted, the server always extends the expiry by its configured
             TTL, measured from the moment the refresh is received.
+
+            It must follow [RFC 3339](https://datatracker.ietf.org/doc/html/rfc3339#section-5.6) and must have time zone.
+            Recommended format is yyyy-MM-dd'T'HH:mm:ss.SSSZ (i.e. which allows 2023-07-03T14:27:08.312+02:00 or 2023-07-03T12:27:08.312Z)
     RegistrationStatus:
       type: string
       enum:
