--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -111,7 +111,7 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: vwip
+  version: 0.3.0-rc.1
   x-camara-commonalities: 0.5
 
 externalDocs:
