--- a/code/API_definitions/webrtc-events-subscription.yaml
+++ b/code/API_definitions/webrtc-events-subscription.yaml
@@ -186,7 +186,7 @@ info:
   license:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: vwip
+  version: 0.2.0-rc.1
   x-camara-commonalities: 0.5
 
 externalDocs:
