fix: align API tests and urls after release review
- Updates servers urls to correct ones(v0.3rc1, v0.2rc1)
- Adds `Generic400` and review for all apis
- Align x-correlator format across APIs
- Limit deviceId format
- Renamed registration api testing files
- Renamed webrtc-events api file for consistency
- Removed sessionNotification schema, not used
- Align regsitration testing with operationId and path
- Reviewed API documentation release candidate identificator

--- a/code/API_definitions/webrtc-events.yaml
+++ b/code/API_definitions/webrtc-events.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: WebRTC Event Subscription
+  title: WebRTC Events
   description: |-
     ## 1. Introduction
 
@@ -187,13 +187,13 @@ info:
     name: Apache 2.0
     url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 0.2.0-rc.1
-  x-camara-commonalities: 0.5
+  x-camara-commonalities: 0.6
 
 externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/WebRTC
 servers:
-  - url: "{apiRoot}/webrtc-events/v0.1"
+  - url: "{apiRoot}/webrtc-events/v0.2rc1"
     variables:
       apiRoot:
         default: http://localhost:9091
@@ -1406,7 +1406,7 @@ components:
     Generic429:
       description: Too Many Requests
       headers:
-        X-Correlator:
+        x-correlator:
           $ref: "#/components/headers/x-correlator"
       content:
         application/json:
