fix: registrationId became mandatory on registration response

--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -320,6 +320,8 @@ components:
               `registrationExpireTime` in the response.
     regSessionResponse:
       type: object
+      required:
+        - registrationId
       properties:
         regInfo:
           $ref: '#/components/schemas/RegistrationInformation'
