fix: fixes  from release review
- Fixes urls at testing files
- Simplifies pattern at deviceId
- Removed reference to notification channel at code/api readme file

--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -294,8 +294,7 @@ components:
       properties:
         deviceId:
           type: string
-          pattern: ^[a-zA-Z0-9-]{0,256}$
-          example: "7d444840-9dc0-11d1-b245-5ffdce74fad2"
+          pattern: uuid
           description: |-
             The deviceId of the client in UUID format. A unique identifier for
             the physical device where a registration is initiated. Generated
