status attribute required in session-invitation

--- a/code/API_definitions/webrtc-events.yaml
+++ b/code/API_definitions/webrtc-events.yaml
@@ -940,6 +940,7 @@ components:
           required:
             - originatorAddress
             - receiverAddress
+            - status
 
     WrtcSDPDescriptor:
       type: object
