fix: Replaced server path from [vx.yrc1] to [vx.y]

--- a/code/API_definitions/webrtc-call-handling.yaml
+++ b/code/API_definitions/webrtc-call-handling.yaml
@@ -215,7 +215,7 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/WebRTC
 servers:
-  - url: '{apiRoot}/webrtc-call-handling/v0.3rc1'
+  - url: '{apiRoot}/webrtc-call-handling/v0.3'
     variables:
       apiRoot:
         description: API root
