--- a/code/API_definitions/webrtc-events.yaml
+++ b/code/API_definitions/webrtc-events.yaml
@@ -193,7 +193,7 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/WebRTC
 servers:
-  - url: "{apiRoot}/webrtc-events/v0.2rc1"
+  - url: "{apiRoot}/webrtc-events/v0.2"
     variables:
       apiRoot:
         default: http://localhost:9091
