--- a/code/API_definitions/webrtc-call-handling.yaml
+++ b/code/API_definitions/webrtc-call-handling.yaml
@@ -275,6 +275,31 @@ paths:
           $ref: "#/components/responses/Generic401"
         '403':
           $ref: '#/components/responses/Generic403'
+        '501':
+          description: Not Implemented
+          headers:
+            x-correlator:
+              $ref: '#/components/headers/x-correlator'
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/ErrorInfo'
+                  - type: object
+                    properties:
+                      status:
+                        enum:
+                          - 501
+                      code:
+                        enum:
+                          - CALLTYPE_EMERGENCY_NOT_SUPPORTED
+              examples:
+                501_CALLTYPE_EMERGENCY_NOT_SUPPORTED:
+                  description: The implementation of API provider does not support the `callType` of `EMERGENCY`.
+                  value:
+                    status: 501
+                    code: CALLTYPE_EMERGENCY_NOT_SUPPORTED
+                    message: Server does not support call type EMERGENCY.
   /sessions/{mediaSessionId}:
     get:
       tags:
